<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="name">杭州-奇芝</string>
    <string name="slogan">动感奇芝，触动你的心</string>
    <string name="email">邮箱 : </string>
    <string name="email_text">contact@cheezhi.com</string>
    <string name="phone">电话 : </string>
    <string name="phone_text">0571—56622731</string>
    <string name="net_ad">网址 : </string>
    <string name="net_add_text">http://www.cheezhi.com/</string>
    <string name="name1">Copyright © Cheezhi Techonology</string>
    <string name="name2">浙ICP备15028630号-1</string>
    <string name="app_name">宠点点</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="index">主页</string>
    <string name="order">订单</string>
    <string name="mine">我的</string>
    <string name="subcusion">私宠定制</string>
    <string name="onekeybuy">一键购买</string>
    <string name="timedistance">您的预定发货倒计时</string>
    <string name="hotrecommend">热门推荐</string>
    <string name="suborder">订阅订单</string>
    <string name="peicaning">配餐中</string>
    <string name="daiqueren">待确认</string>
    <string name="allorder">查看全部订单</string>
    <string name="daifukuan">待付款</string>
    <string name="daifahuo">待发货</string>
    <string name="daishouhuo">待收货</string>
    <string name="daipingjia">待评价</string>
    <string name="tuihuo">退货/售后</string>
    <string name="bangzhu">帮助</string>
    <string name="loginorregister">请登录</string>
    <string name="zhanghuyue">账户余额</string>
    <string name="wallet">我的钱包</string>
    <string name="coupon">我的优惠券</string>
    <string name="message">消息中心</string>
    <string name="addressManger">收货地址</string>
    <string name="addressManager">管理收货地址</string>
    <string name="add_address">新增收货地址</string>
    <string name="aboutus">关于我们</string>
    <string name="feedback">问题反馈</string>
    <string name="title_activity_info_page_one">InfoPageOneActivity</string>
    <string name="leibie">类别</string>
    <string name="peizhong">品种</string>
    <string name="age">年龄</string>
    <string name="another_info">其他信息请留言</string>
    <string name="leibie_hint">请选择类别</string>
    <string name="pinzhong_hint">请选择品种</string>
    <string name="age_hint">请选择年龄</string>
    <string name="nexttip">下一步</string>
    <string name="sub_sub">提交订单</string>
    <string name="start_pipei">一键匹配</string>
    <string name="title_activity_one_key_buy">OneKeyBuyActivity</string>
    <string name="title_activity_choose_pay">ChoosePayActivity</string>
    <string name="choose_type">选择方案（每月金额）</string>
    <string name="money_type1">200</string>
    <string name="money_type2">500</string>
    <string name="money_type3">800</string>
    <string name="money_type4">自定义</string>
    <string name="choose_time">选择订阅时间</string>
    <string name="choose_address">选择收货地址</string>
    <string name="title_activity_pi_pei_list">PiPeiListActivity</string>
    <string name="pipei_result">匹配结果</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="inputName">请输入帐号</string>
    <string name="inputPassword">请输入密码</string>
    <string name="inputPhone">请输入手机号</string>
    <string name="yanzhengNum">输入验证码</string>
    <string name="msgLogin">短信验证码登录</string>
    <string name="getyanzheng">获取验证码</string>
    <string name="forgetPassword">忘记密码</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="backs">返回</string>
    <string name="contect">联系方式</string>
    <string name="qqemail">qq/邮箱</string>
    <string name="title_activity_msg_login">MsgLoginActivity</string>
    <string name="title_activity_forget_code">ForgetCodeActivity</string>
    <string name="title_activity_set_new_code">SetNewCodeActivity</string>
    <string name="edit_code">修改密码</string>
    <string name="inputNewCode">输入新密码</string>
    <string name="inputConfirmCode">确认密码</string>
    <string name="title_activity_good_detail">GoodDetailActivity</string>
    <string name="goodDetails">商品详情</string>
    <string name="decian">宝路品牌  放心购买  值得信赖  富含各种微量元素  宠物零食 </string>
    <string name="youhui">火爆销售中，速来抢购吧</string>
    <string name="saledNum">已售</string>
    <string name="yuanjia">原价</string>
    <string name="guige">商品规格</string>
    <string name="pinpai">品牌</string>
    <string name="chanpinguige">产品规格</string>
    <string name="productDate">生产日期</string>
    <string name="baozhiDate">保质期</string>
    <string name="dingyue">订阅</string>
    <string name="buy_now">立即购买</string>
    <string name="title_activity_deal_order">DealOrderActivity</string>
    <string name="title_activity_confirm_order">ConfirmOrderActivity</string>
    <string name="title_activity_pet_list_search">PetListSearchActivity</string>
    <string name="choosepettype">选择品种</string>
    <string name="title_activity_set">SetActivity</string>
    <string name="set">设置</string>
    <string name="title_activity_wallet">WalletActivity</string>
    <string name="title_activity_discount">DiscountActivity</string>
    <string name="title_activity_message">MessageActivity</string>
    <string name="title_activity_address_manger">AddressMangerActivity</string>
    <string name="title_activity_about_us">AboutUsActivity</string>
    <string name="title_activity_feedback">FeedbackActivity</string>
    <string name="title_activity_choose_address">ChooseAddressActivity</string>
    <string name="submit">提交</string>
    <string name="in_money">充值</string>
    <string name="out_money">提现</string>
    <string name="bankcard">我的银行卡</string>
    <string name="xiaofeijilu">消费记录</string>
    <string name="payManager">支付记录</string>
    <string name="title_activity_not_pay">NotPayActivity</string>
    <string name="title_activity_shipping">ShippingActivity</string>
    <string name="title_activity_receipting">ReceiptingActivity</string>
    <string name="title_activity_assessing">AssessingActivity</string>
    <string name="title_activity_customer_back">CustomerBackActivity</string>
    <string name="title_activity_help">HelpActivity</string>
    <string name="title_activity_all_order">AllOrderActivity</string>
    <string name="title_activity_add_adress">AddAdressActivity</string>
    <string name="save">保存</string>

</resources>