<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ChoosePayActivity" >

    <RelativeLayout
        android:id="@+id/acp_rel"
        style="@style/mw"
        android:background="@color/themeColor" >

        <ImageView
            android:id="@+id/acp_back"
            style="@style/ww"
            android:layout_centerVertical="true"
            android:layout_marginLeft="13dp"
            android:src="@drawable/u200" />

        <TextView
            style="@style/topbar"
            android:text="@string/subcusion" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/acp_rel"
        android:background="@color/white"
        android:orientation="vertical"
        android:padding="20dp" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/choose_type"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal" >

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <RadioButton
                    style="@style/radio_btn"
                    android:text="@string/money_type1" />

                <RadioButton
                    style="@style/radio_btn"
                    android:layout_marginLeft="20dp"
                    android:text="@string/money_type2" />

                <RadioButton
                    style="@style/radio_btn"
                    android:layout_marginLeft="20dp"
                    android:text="@string/money_type3" />

                <RadioButton
                    style="@style/radio_btn"
                    android:layout_marginLeft="20dp"
                    android:text="@string/money_type4" />
            </RadioGroup>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="10dp"
            android:background="@color/gray1" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/choose_time"
                android:textSize="16sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:background="@drawable/edit_input"
                android:drawableRight="@drawable/u237" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="10dp"
            android:background="@color/gray1" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:drawableRight="@drawable/u102"
            android:text="@string/choose_address"
            android:textSize="16sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="20dp"
            android:background="@color/gray1" />

        <TextView
            android:id="@+id/acp_sub"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:background="@drawable/morebtn_selector"
            android:clickable="true"
            android:gravity="center"
            android:text="@string/sub_sub"
            android:textColor="@color/white"
            android:textSize="16sp" />
    </LinearLayout>

</RelativeLayout>