<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".InfoPageOneActivity" >

    <RelativeLayout
        android:id="@+id/aip_rel"
        style="@style/mw"
        android:background="@color/themeColor" >

        <ImageView
            android:id="@+id/aip_back"
            style="@style/ww"
            android:layout_centerVertical="true"
            android:layout_marginLeft="13dp"
            android:src="@drawable/u200" />

        <TextView
            style="@style/topbar"
            android:text="@string/subcusion" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/aip_rel"
        android:background="@color/white"
        android:orientation="vertical"
        android:padding="10dp" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="10dp" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/leibie"
                android:textColor="@color/blackTextColor"
                android:textSize="18sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:background="@drawable/edit_input"
                android:drawableRight="@drawable/u237"
                android:hint="@string/leibie_hint" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="10dp" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/peizhong"
                android:textColor="@color/blackTextColor"
                android:textSize="18sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:background="@drawable/edit_input"
                android:drawableRight="@drawable/u237"
                android:hint="@string/pinzhong_hint" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="10dp" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/age"
                android:textColor="@color/blackTextColor"
                android:textSize="18sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:background="@drawable/edit_input"
                android:drawableRight="@drawable/u237"
                android:hint="@string/age_hint" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/another_info"
            android:textColor="@color/blackTextColor"
            android:layout_marginLeft="10dp"
            android:textSize="18sp" />
        <TextView 
            android:id="@+id/other_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minLines="3"
            android:layout_margin="10dp"
            android:background="@drawable/edit_input"
            />
        <TextView 
            android:id="@+id/aip_nextStep"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:gravity="center"
            android:clickable="true"
            android:background="@drawable/morebtn_selector"
            android:textSize="16sp"
            android:textColor="@color/white"
            android:text="@string/nexttip"
            />
    </LinearLayout>

</RelativeLayout>