<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:background="@color/white"
        android:orientation="vertical" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:layout_marginLeft="13dp"
            android:text="@string/suborder"
            android:textSize="16sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/gray1" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dp"
            android:gravity="center"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/peicanzhong"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:clickable="true"
                android:background="@drawable/normal_btn_selcetor"
                android:drawableLeft="@drawable/u96"
                android:gravity="center_vertical"
                android:text="@string/peicaning"
                android:textColor="@color/blackTextColor" />

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@color/gray1" />

            <TextView
                android:id="@+id/daiquerening"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="1dp"
                android:layout_weight="1"
                android:clickable="true"
                android:background="@drawable/normal_btn_selcetor"
                android:drawableLeft="@drawable/u94"
                android:gravity="center_vertical"
                android:text="@string/daiqueren"
                android:textColor="@color/blackTextColor" />
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/normal_btn_selcetor"
        android:drawableRight="@drawable/u102"
        android:paddingBottom="5dp"
        android:paddingLeft="13dp"
        android:paddingRight="13dp"
        android:paddingTop="5dp"
        android:clickable="true"
        android:text="@string/allorder"
        android:textSize="16sp" />

    <GridView
        android:id="@+id/ordermenu_gridview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:horizontalSpacing="2dp"
        android:numColumns="3"
        android:verticalSpacing="2dp" >
    </GridView>

</LinearLayout>