<?xml version="1.0" encoding="utf-8"?>
<com.cdd.customview.ReboundScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:custom="http://schemas.android.com/apk/res/com.cdd.chongdiandian"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="none"
    android:background="@color/backgroundColor" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/backgroundColor"
        android:orientation="vertical" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/themeColor"
            android:gravity="center_vertical"
            android:paddingBottom="20dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingTop="20dp" >

            <com.cdd.customview.CircleImageView
                android:id="@+id/circlrimageview"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:src="@drawable/u275"
                custom:border_color="@color/white"
                custom:border_width="2dp" />

            <TextView
                android:id="@+id/login_register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginLeft="20dp"
                android:text="@string/loginorregister"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="20dp"
                android:src="@drawable/u102" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="@drawable/normal_btn_selcetor"
            android:clickable="true"
            android:orientation="horizontal"
            android:padding="10dp" >

            <ImageView
                android:id="@+id/mine_img1"
                style="@style/ww"
                android:src="@drawable/u314" />

            <TextView
                android:id="@+id/mine_text1"
                style="@style/mine_item_text"
                android:layout_toRightOf="@id/mine_img1"
                android:text="@string/wallet" />

            <ImageView
                style="@style/mine_item_img"
                android:src="@drawable/u102" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dp"
            android:background="@drawable/normal_btn_selcetor"
            android:clickable="true"
            android:orientation="horizontal"
            android:padding="10dp" >

            <ImageView
                android:id="@+id/mine_img2"
                style="@style/ww"
                android:src="@drawable/u316" />

            <TextView
                android:id="@+id/mine_text2"
                style="@style/mine_item_text"
                android:layout_toRightOf="@id/mine_img2"
                android:text="@string/coupon" />

            <ImageView
                style="@style/mine_item_img"
                android:src="@drawable/u102" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="@drawable/normal_btn_selcetor"
            android:clickable="true"
            android:orientation="horizontal"
            android:padding="10dp" >

            <ImageView
                android:id="@+id/mine_img3"
                style="@style/ww"
                android:src="@drawable/u318" />

            <TextView
                android:id="@+id/mine_text3"
                style="@style/mine_item_text"
                android:layout_toRightOf="@id/mine_img3"
                android:text="@string/message" />

            <ImageView
                style="@style/mine_item_img"
                android:src="@drawable/u102" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dp"
            android:background="@drawable/normal_btn_selcetor"
            android:clickable="true"
            android:orientation="horizontal"
            android:padding="10dp" >

            <ImageView
                android:id="@+id/mine_img4"
                style="@style/ww"
                android:src="@drawable/u320" />

            <TextView
                android:id="@+id/mine_text4"
                style="@style/mine_item_text"
                android:layout_toRightOf="@id/mine_img4"
                android:text="@string/addressManger" />

            <ImageView
                style="@style/mine_item_img"
                android:src="@drawable/u102" />
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="@drawable/normal_btn_selcetor"
            android:clickable="true"
            android:orientation="horizontal"
            android:padding="10dp" >

            <ImageView
                android:id="@+id/mine_img5"
                style="@style/ww"
                android:src="@drawable/u322" />

            <TextView
                android:id="@+id/mine_text5"
                style="@style/mine_item_text"
                android:layout_toRightOf="@id/mine_img5"
                android:text="@string/aboutus" />

            <ImageView
                style="@style/mine_item_img"
                android:src="@drawable/u102" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dp"
            android:background="@drawable/normal_btn_selcetor"
            android:clickable="true"
            android:orientation="horizontal"
            android:padding="10dp" >

            <ImageView
                android:id="@+id/mine_img6"
                style="@style/ww"
                android:src="@drawable/u324" />

            <TextView
                android:id="@+id/mine_text6"
                style="@style/mine_item_text"
                android:layout_toRightOf="@id/mine_img6"
                android:text="@string/feedback" />

            <ImageView
                style="@style/mine_item_img"
                android:src="@drawable/u102" />
        </RelativeLayout>
    </LinearLayout>

</com.cdd.customview.ReboundScrollView>